# Alfred_Project

./: Cargo.toml  Makefile  README.md  setup_polygon_node.sh
docker/: Dockerfile  docker-compose.yml
src/: arbitrage.rs  config.rs  database.rs  errors.rs  main.rs
src/dex/: mod.rs  quickswap.rs  uniswap.rs
